--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,7 +9,7 @@ html(lang='ja')
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js", integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+", crossorigin="anonymous")
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css')
-
+    link(rel='stylesheet', href='/stylesheets/style.css')
   body
     div.container-fluid
       div.row
